fix image and image subtext alignment
Make changes in the images panel to properly add space between  the four images.
Fix subtext so they don't go past the image borders.

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body {
     color: #1f2937;
     font-size: 36px;
     font-weight: 700;
+    text-align: center;
 }
 
 .subtext {
@@ -143,15 +144,17 @@ body {
 .panel#two {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding: 5% 5%;
     gap: 24px;
 }
 
 .images {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+
+.images > div {
+    width: 200px;
 }
 
 .images img {
